# metagen-phage-pipeline

./: MANIFEST.in  Makefile  README.md  README_EN.md  pyproject.toml  setup.cfg
analysis/: completeness.tsv  contamination.tsv  proviruses.fna  quality_summary.tsv  viruses.fna
docker/virsorter/: Dockerfile
examples/: pipeline.bash
src/metagen_phage_pipeline/: cli.py
src/metagen_phage_pipeline/cli_aux/: cli_aux.py
src/metagen_phage_pipeline/pipes/config/: config.cfg
src/metagen_phage_pipeline/pipes/tasks/: tasks_binning.wdl  tasks_dedup.wdl  tasks_mapping.wdl  tasks_prediction.wdl  tasks_sorting.wdl
src/metagen_phage_pipeline/pipes/workflows/: main_flow.wdl  teste.json
tests/: test_cli.py
tests/assets/: multifasta.fasta
