[metadata]
name = metagen-phage-pipeline
version = 0.1.0
description = Pipeline para busca de bacteriófagos a partir de MAGs
long_description = file: README.md
long_description_content_type = text/markdown
author = Vinicius S. Flores
author_email = vinicius.nuvem@gmail.com
license = GNU

[options]
packages = find:
package_dir == src
include_package_data = True
python_requires = >= 3.10
zip_safe = False
install_requires =
    miniwdl == 1.11.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    metagen-phage = metagen_phage_pipeline.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203 
